# PossionSolver

./: .gitignore  CMakeLists.txt
doc/: main.typ
hdr/: solver.h
lib/: libsolver.dylib
result/: analytical_solution.vtk  error.vtk  numerical_solution.vtk  output.vtk
scripts/: VTK_show.py
src/: main.cpp  solver.cpp
